DuPont DevSB/src/objects/ccrz__L_Logger_Setup_Clone__c.object
<CustomObject>
    <description>Creates the object referencing the values in the hierarchical custom setting. Email templates can refer only object and not custom settings.</description>
    <fields>
        <fullName>ccrz__Application_Name__c</fullName>
        <formula>$Setup.ccrz__L_Logger_Setup__c.ccrz__Application_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Application Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__Email_Body__c</fullName>
        <formula>$Setup.ccrz__L_Logger_Setup__c.ccrz__Email_Body__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email Body</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__Email_Footer__c</fullName>
        <formula>$Setup.ccrz__L_Logger_Setup__c.ccrz__Email_Footer__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email Footer</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__Email_Header__c</fullName>
        <formula>$Setup.ccrz__L_Logger_Setup__c.ccrz__Email_Header__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email Header</label>
        <type>Text</type>
    </fields>
    <label>L_Logger Setup</label>
    <nameField>
        <displayFormat>Logger-{0000000}</displayFormat>
        <label>Logger Setup Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>L_Logger Setup</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>